# workhours

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.amplify  README.md  amplify.yml  docker-compose.yml  fr_2025_2030.txt  swagger-ui.html
src/: db.rs  holidays_api.rs  lib.rs  main.rs  openapi.rs  swagger.rs
tests/: api_tests.rs  db_tests.rs
