[package]
name = "workhours"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_qs = "0.10"
serde_with = "3.0"
chrono-tz = "0.9"
serde_yaml = "0.9.34-deprecated"
rusqlite = "0.29.0"
log = "0.4.27"
env_logger = "0.10.0"
dotenv = "0.15.0"
cloudwatch_logging = "1.0.0"

[dev-dependencies]
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
mockall = "0.11"
actix-test = "0.1.1"
actix-http = "3.3.1"
time = { version = "0.3.41", features = ["formatting"] }

